tests/snapshots/test_runner__tests__compiler__typecheck__import_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// circular import
import "./import_7.kk" spam

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_8.kk:2:8
  │
2 │ import "./import_6.kk" spam
  │        ^^^^^^^^^^^^^^^ Cyclic dependencies detected.
  │
  = Explanation:

      tests/compiler/typecheck/import_6.kk imports tests/compiler/typecheck/import_7.kk
      tests/compiler/typecheck/import_7.kk imports tests/compiler/typecheck/import_8.kk
      tests/compiler/typecheck/import_8.kk imports tests/compiler/typecheck/import_6.kk
